--- a/FftWrap.Codegen/FftWrap.Codegen.csproj
+++ b/FftWrap.Codegen/FftWrap.Codegen.csproj
@@ -82,14 +82,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FftwHeaderParser.cs" />
+    <Compile Include="Method.cs" />
     <Compile Include="Modifiers.cs" />
     <Compile Include="AccessModifiers.cs" />
     <Compile Include="CodeGenerator.cs" />
+    <Compile Include="Parameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoslynHelper.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Headers\fftw3.h" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
