--- a/FftWrap.Examples/FftWrap.Examples.csproj
+++ b/FftWrap.Examples/FftWrap.Examples.csproj
@@ -70,6 +70,10 @@
       <Project>{a61d92fe-42a4-47f4-b103-392f017c64d4}</Project>
       <Name>FftWrap.Codegen</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FftWrap\FftWrap.csproj">
+      <Project>{5cb1047e-437f-4bf3-a2e3-5a43c9cba91e}</Project>
+      <Name>FftWrap</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
