--- a/FftWrap/FftWrap.csproj
+++ b/FftWrap/FftWrap.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,8 +58,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Direction.cs" />
     <Compile Include="Flags.cs" />
     <Compile Include="GuruFlags.cs" />
+    <Compile Include="ComplexArray1D.cs" />
+    <Compile Include="NativeArray1DHelper.cs" />
+    <Compile Include="NativeArray1D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnsafeNativeMethods.cs" />
   </ItemGroup>
