--- a/FftWrap/FftWrap.csproj
+++ b/FftWrap/FftWrap.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Direction.cs" />
+    <Compile Include="Fftw.cs" />
+    <Compile Include="FftwMpi.cs" />
     <Compile Include="Flags.cs" />
     <Compile Include="GuruFlags.cs" />
     <Compile Include="Memory.cs" />
@@ -69,7 +71,6 @@
     <Compile Include="Plan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Numerics\SingleComplex.cs" />
-    <Compile Include="UnsafeNativeMethods.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
