--- a/FftWrap.Examples/FftWrap.Examples.csproj
+++ b/FftWrap.Examples/FftWrap.Examples.csproj
@@ -53,6 +53,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Porvem.Parallel">
+      <HintPath>..\externdll\Porvem.Parallel.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
